Fix broken code generation