@@ -26,6 +26,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
 
+import javax.xml.datatype.DatatypeFactory;
 import javax.xml.datatype.XMLGregorianCalendar;
 
 import org.junit.jupiter.params.ParameterizedTest;
@@ -361,6 +362,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
                   } )
                   .put( "START_TIMESTAMP", new TypeToken<StaticProperty<XMLGregorianCalendar>>() {
                   } )
+                  .put( "_datatypeFactory", DatatypeFactory.class )
                   .build(), new HashMap<>() );
 
       result.assertFields( "MetaAspectWithErrorCollection",
@@ -369,6 +371,7 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
                   .put( "CHARACTERISTIC_NAMESPACE", String.class )
                   .put( "INSTANCE", "MetaAspectWithErrorCollection" )
                   .put( "ITEMS", "StaticContainerProperty<Error,Collection<Error>>" )
+                  .put( "_datatypeFactory", DatatypeFactory.class )
                   .build(), new HashMap<>() );
    }
 
@@ -464,13 +467,13 @@ public class StaticMetaModelJavaGeneratorTest extends StaticMetaModelGeneratorTe
             + "MetaModelBaseAttributes.from(KnownVersion." + KnownVersion.getLatest() + ", "
             + "AspectModelUrn.fromUrn(NAMESPACE + \"testProperty\"), \"TestEnumeration\"), "
             + "Optional.of(new DefaultScalar(\"http://www.w3.org/2001/XMLSchema#int\", KnownVersion." + KnownVersion.getLatest() + ")), "
-            + "List.of(TestEnumeration.values()))";
+            + "Arrays.asList(TestEnumeration.values()))";
 
       final String expectedOptionalTestPropertyCharacteristicConstructorCall = "new DefaultEnumeration("
             + "MetaModelBaseAttributes.from(KnownVersion." + KnownVersion.getLatest() + ", "
             + "AspectModelUrn.fromUrn(NAMESPACE + \"optionalTestProperty\"), \"TestEnumeration\"), "
             + "Optional.of(new DefaultScalar(\"http://www.w3.org/2001/XMLSchema#int\", KnownVersion." + KnownVersion.getLatest() + ")), "
-            + "List.of(TestEnumeration.values()))";
+            + "Arrays.asList(TestEnumeration.values()))";
 
       result.assertConstructorArgumentForProperties( "MetaAspectWithEnumAndOptionalEnumProperties",
             ImmutableMap.<String, String> builder()
